--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
 
                 <!-- #game-screen is initially hidden using CSS style display: none -->
-                    <div id="game-screen"></div>
+                    <div id="game-screen" style="text-align: center;"></div>
             </div>
 
 
@@ -43,7 +43,8 @@
                     </p>
                     <button id="restart-button">Try Again!</button>
                 </div>
-     
+
+        <script type="text/javascript"  src="js/obstacle.js"></script>
         <script type="text/javascript"  src="js/player.js"></script>
         <script type="text/javascript"  src="js/game.js"></script>
         <script type="text/javascript"  src="js/script.js"></script>
