final working going on

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             <div id="game-container">
                 <div>
-                  <h2>Number Of Goals</h2>
+                  <h2>Scores</h2>
                   <p>Score: <span id="score">0</span></p>
                   <p>Lives: <span id="lives">5</span></p>
                 </div>
@@ -34,13 +34,10 @@
 
                 <!-- #game-end is initially hidden using CSS style display: none -->
                 <div id="game-end">
-                    <img src="./images/end game.jpg" alt="" class="end-img" />
+                    
                     <h1>Game Over!</h1>
                     <br />
-                    <p>
-                        <span>Your Score:</span>
-                        <span id="Final-Score">0</span>
-                    </p>
+                    
                     <button id="restart-button">Try Again!</button>
                 </div>
 
