--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
                     and Buttercup to save Townsville from villains using their unique superpowers and teamwork.</p>
                 <button id="btn">Let's Begin</button>
                 <button id="btn_inst">Instructions</button>
+                <div id="info">
+                        <p>A to move Left</p>
+                        <p>D to move Right</p>
+                        <p>W to move Up</p>
+                        <p>S to move Down</p>
+                </div>
+                
                 <button id="players">Choose A Player</button>
            
         </div>
@@ -41,6 +48,7 @@
                     <button id="restart-button">Try Again!</button>
                 </div>
 
+        <script type="text/javascript"  src="js/instruction.js"></script>  
         <script type="text/javascript"  src="js/obstacle.js"></script>
         <script type="text/javascript"  src="js/player.js"></script>
         <script type="text/javascript"  src="js/game.js"></script>
